# mailer_lambda

./: README.md  app.py  pyproject.toml  send_mail.py
.github/workflows/: main.yaml
src/: send_mail.py
